--- a/website/buyer.css
+++ b/website/buyer.css
@@ -1,8 +1,10 @@
 body {
     margin: 0;
     height: 100vh;
-    background-color: black;
+    background-color: rgb(24, 23, 23);
 }
 .markettext{
+    text-align:center;
+    font-size: 20px;
     color: white;
 }
