--- a/website/web.css
+++ b/website/web.css
@@ -2,7 +2,7 @@ body {
     margin: 0; /* Убираем отступы */
     height: 100vh; /* Высота окна браузера */
     background-color: rgb(24, 23, 23); /* Черный цвет фона */
-    position: relative;
+    position: relative; /* свойство CSS для более удобного размещения по пикселям*/
 }
 h1 {
     font-size: 35px;
@@ -10,10 +10,20 @@ h1 {
     text-align: center;
     color: white
 }
-.button-50 {
+.introdctuion{
+  font-size: 17px;
+color: white;
+position: relative;
+left: 200px;
+top: 250px;
+}
+
+
+
+.button-50 { 
     position: absolute;
-    top: 100x; /* 20px от верхнего края */
-    left: 20px; /* 20px от правого края */
+    top: 450px;
+    left: 450px; 
     appearance: button;
     background-color: #000;
     background-image: none;
@@ -63,3 +73,75 @@ h1 {
       padding: 12px 50px;
     }
   }
+  .button-51 {
+    position: absolute;
+    top: 450px;
+    left: 250px; 
+    appearance: button;
+    background-color: #000;
+    background-image: none;
+    border: 1px solid #000;
+    border-radius: 4px;
+    box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    margin: 0 5px 10px 0;
+    overflow: visible;
+    padding: 12px 40px;
+    text-align: center;
+    text-transform: none;
+    touch-action: manipulation;
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
+  }
+  
+  .button-51:focus {
+    text-decoration: none;
+  }
+  
+  .button-51:hover {
+    text-decoration: none;
+  }
+  
+  .button-51:active {
+    box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
+    outline: 0;
+  }
+  
+  .button-51:not([disabled]):active {
+    box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+    transform: translate(2px, 2px);
+  }
+  
+  @media (min-width: 768px) {
+    .button-51 {
+      padding: 12px 50px;
+    }
+  }
+  html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Убираем горизонтальную прокрутку */
+    width: 100%; /* Устанавливаем ширину страницы в 100% */
+}
+.container {
+  display: flex;
+  gap: 20px;
+}
+
+.rectangle-1 {
+  position: relative;
+  top: 600px;
+  left: 20px;
+  background-color: black;
+  height: 200px;
+  width: 100%;
+}
