--- a/website/web.css
+++ b/website/web.css
@@ -18,9 +18,6 @@ position: relative;
 left: 200px;
 top: 250px;
 }
-
-
-
 .button-50 { 
     position: absolute;
     top: 450px;
@@ -191,4 +188,25 @@ top: 250px;
 .gardatext a:hover, .pisktext a:hover {
   color: rgb(196, 10, 196); /* Цвет ссылки при наведении */
   text-decoration: underline; /* Добавляем подчёркивание */
+}
+.registtext a{
+  position: relative;
+  top: -700px;
+  left: 1550px;
+  font-size: 20px;
+  color: black;
+  text-decoration: none;
+}
+.signup a{
+  position: relative;
+  font-family: bold;
+  top: -722px;
+  left: 1700px;
+  font-size: 20px;
+  color: black;
+  text-decoration:none;
+}
+.registtext a:hover, .signup a:hover {
+  color: rgb(196, 10, 196); /* Цвет ссылки при наведении */
+  text-decoration: none; /* Добавляем подчёркивание */
 }
