--- a/website/web.css
+++ b/website/web.css
@@ -6,6 +6,8 @@ body {
   overflow: hidden; /* Убираем вертикальную прокрутку */
 }
 h1 {
+    font-family: 'Arial', 'Helvetica', sans-serif;
+    text-decoration: line-through;
     font-size: 35px;
     font-style: normal;
     text-align: center;
@@ -13,6 +15,7 @@ h1 {
 }
 .introdctuion{
   font-size: 17px;
+    font-family: 'Arial', 'Helvetica', sans-serif;
 color: rgb(0, 0, 0);
 position: relative;
 left: 200px;
@@ -168,6 +171,7 @@ top: 250px;
 }
 .gardatext, .pisktext {
   position: relative;
+  font-family: 'Arial', 'Helvetica', sans-serif;
   left: 20px;
   font-size: 20px;
   color: white;
@@ -179,6 +183,7 @@ top: 250px;
 
 .gardatext a, .pisktext a {
   position: relative;
+  font-family: 'Arial', 'Helvetica', sans-serif;
   left: 10px;
   font-size: 20px;
   color: rgb(255, 255, 255);
@@ -190,6 +195,7 @@ top: 250px;
   text-decoration: underline; /* Добавляем подчёркивание */
 }
 .registtext a{
+  font-family: 'Arial', 'Helvetica', sans-serif;
   position: relative;
   top: -700px;
   left: 1550px;
@@ -199,7 +205,7 @@ top: 250px;
 }
 .signup a{
   position: relative;
-  font-family: bold;
+  font-family: 'Arial', 'Helvetica', sans-serif;
   top: -722px;
   left: 1700px;
   font-size: 20px;
