--- a/jdm/main/templates/cars/buyer.html
+++ b/jdm/main/templates/cars/buyer.html
@@ -1,11 +1,10 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Market</title>
-    <link rel="stylesheet" href="{% static 'cars/css/buyer.css' %}">
+    <link rel="stylesheet" href="buyer.css">
 </head>
 <body>
     <div class="markettext">
