--- a/jdm/main/templates/cars/car_detail.html
+++ b/jdm/main/templates/cars/car_detail.html
@@ -1,16 +1,15 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="{% static 'cars/css/car_detail.css' %}">
+    <link rel="stylesheet" href="car_detail.css">
 </head>
 <body>
     <div class="cartext">
 
-       <h1> The name of car is "..." </h1>
+       <h1> Car_detail </h1>
 
     </div>
 </body>
