--- a/jdm/main/templates/main/index.html
+++ b/jdm/main/templates/main/index.html
@@ -1,12 +1,10 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main site</title>
-    <link rel="stylesheet" href="{% static 'main/css/index.css' %}">
-    <img src="{% static 'main/img/main.jpg' %}">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
