--- a/jdm/main/templates/registration/sign.html
+++ b/jdm/main/templates/registration/sign.html
@@ -1,11 +1,9 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'registration/css/sigh.css' %}">
-    <img src="{% static 'registration/img/obshina50pr.jpg' %}">
+    <link rel="stylesheet" href="sigh.css">
     <title>Sign Up</title>
 </head>
 <body>
